# tinyzero_diffusion

./: .gitignore  .gitmodules  .mlops-config.yaml  README.md  download_hf_data.py  job.sh  job_ar.sh  job_llada.sh  pyproject.toml  requirements.txt  train.py  train_diffusion.sh
configs/: config.yaml  config_qwen2.5_0.5b.yaml  config_qwen2.5_1.5b.yaml  config_rl_countdown.yaml  config_rl_countdown_ar.yaml  config_rl_llada.yaml  config_train_countdown.yaml
configs/data/: countdown.yaml  shakespeare.yaml
configs/model/: default.yaml  diffusion.yaml  qwen2.5_0.5b-instruct.yaml  qwen2.5_0.5b.yaml  qwen2.5_1.5b.yaml
configs/tokenizer/: llama.yaml  qwen2.5.yaml
configs/trainer/: default.yaml
configs/training/: default.yaml
data/countdown/: README.md  countdown_hf_val.jsonl  countdown_sft_1k_train.jsonl  countdown_sft_1k_val.jsonl  generate_data.py
notebooks/: exploration.ipynb
scripts/: train.py
src/tzd/: __init__.py
src/tzd/data/: __init__.py  countdown.py  countdown_datamodule.py  datamodule.py
src/tzd/models/: __init__.py  autoregressive.py  autoregressive_pretrained.py  base.py  diffusion.py  diffusion_pretrained.py  diffusion_rl.py  lit_model.py
src/tzd/models/llada/: inference.py
src/tzd/rl/: module.py  parsing.py  rewards.py
src/tzd/utils/: __init__.py  generation.py  reward_logging.py
tests/: test_countdown_simple.py  test_countdown_tokenizer.py  test_grpo_dataflow.py  test_llada_gen.py  test_models.py  test_qlora.py  test_rl_alignment.py  test_rl_components.py  test_rl_integration.py  test_tinyzero_alignment.py
(+7 files in other folders)
