[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tzd"
version = "0.0.1"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "Tiny Zero Diffusion - A minimal diffusion language model framework"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.0",
    "lightning>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "einops>=0.6.0",
    "wandb>=0.15.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "bitsandbytes"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
